--- a/testapp/templates/htmls/processed.html
+++ b/testapp/templates/htmls/processed.html
@@ -10,19 +10,11 @@
     </div>
 </div>
 
+<h1>画像加工アプリ</h1>
+<p>画像の加工が完了しました</p>
+<!-- 加工前と加工後の画像を表示 -->
+<img src="/static/up/{{ original }}" alt="original">
+<img src="/static/up/{{ processed }}" alt="processed">
 
-<div class="centered-container">
-    <div class="button-container">
-        <form method="get">
-            <a class="btn btn-flat" role="button"><span>画像をアップロードする</span></a>
-        </form>
-    </div>
-</div>
-
-
-
-
-
-</div>
 <script src="{{ url_for('static', filename='javascript/sample.js') }}"></script>
 {% endblock %}
