--- a/testapp/templates/htmls/processed.html
+++ b/testapp/templates/htmls/processed.html
@@ -13,8 +13,8 @@
 <h1>画像加工アプリ</h1>
 <p>画像の加工が完了しました</p>
 <!-- 加工前と加工後の画像を表示 -->
-<img src="/static/up/{{ original }}" alt="original">
-<img src="/static/up/{{ processed }}" alt="processed">
+<img src="testapp/static/up/{{ original }}" alt="original">
+<img src="testapp/static/up/{{ processed }}" alt="processed">
 
 <script src="{{ url_for('static', filename='javascript/sample.js') }}"></script>
 {% endblock %}
