--- a/testapp/templates/htmls/processed.html
+++ b/testapp/templates/htmls/processed.html
@@ -14,7 +14,7 @@
 <p>画像の加工が完了しました</p>
 <!-- 加工前と加工後の画像を表示 -->
 <img src="static/up/{{ original }}" alt="original" width="49%">
-<img src="static/up/{{ processed }}" alt="processed" width="49%">
+<img src="static/down/{{ processed }}" alt="processed" width="49%">
 
 <script src="{{ url_for('static', filename='javascript/sample.js') }}"></script>
 {% endblock %}
