--- a/testapp/templates/htmls/processed.html
+++ b/testapp/templates/htmls/processed.html
@@ -8,7 +8,13 @@
     <div class="text-container">
         <h1>肖像権指パッチン</h1>
     </div>
+    <div class="text-container">
+        <form action="/" method="get">
+            <a href="/" class="btn btn-flat" role="button"><span>ホームに戻る!</span></a>
+        </form>
+    </div>
 </div>
+
 
 <h1>画像加工アプリ</h1>
 <p>画像の加工が完了しました</p>
