--- a/testapp/templates/htmls/processed.html
+++ b/testapp/templates/htmls/processed.html
@@ -8,22 +8,20 @@
     <div class="text-container">
         <h1>肖像権指パッチン</h1>
     </div>
-    <div class="text-container">
-        <form action="/" method="get">
-            <a href="/" class="btn btn-flat" role="button"><span>ホームに戻る!</span></a>
-        </form>
-    </div>
+
 </div>
 
 <h1>画像加工アプリ</h1>
 <p>画像の加工が完了しました</p>
 <!-- 加工前と加工後の画像を表示 -->
-<img src="static/up/{{ original }}" alt="original" width="49%">
-<img src="static/down/{{ processed }}" alt="processed" width="49%">
+<img src="{{ url_for('static', filename='up/' + original) }}" alt="original" width="49%">
+<img src="{{ url_for('static', filename='down/' + processed) }}" alt="processed" width="49%">
 
 <div class="button.btn ">
     <form action="/" method="get">
         <a href="/" class="btn btn-flat" role="button"><span>新しく画像を加工する</span></a>
+        <!-- ダウンロードボタンを追加 -->
+        <a href="{{ url_for('download', filename=processed) }}" class="btn btn-flat" role="button"><span>加工後の画像をダウンロードする</span></a>
     </form>
 </div>
 
